fixed project visibility according to assigned users

--- a/src/pages/create/Create.css
+++ b/src/pages/create/Create.css
@@ -1,3 +1,4 @@
 .create-form {
     max-width: 80%;
+    padding-bottom: 2%;
 }
